# dde-launchpad

./: .gitignore  CMakeLists.txt  README.md  README.zh_CN.md  REUSE.toml  debughelper.cpp  debughelper.h  desktopintegration.cpp  desktopintegration.h  inputeventitem.cpp  inputeventitem.h  launchercontroller.cpp  launchercontroller.h  main.cpp  org.deepin.dde.Launcher1.xml  qml.qrc
.obs/: workflows.yml
.reuse/: dep5
.tx/: config  transifex.yaml
archlinux/: PKGBUILD
dbus/: CMakeLists.txt  org.deepin.dde.Launcher1.service.in
dde-shell-wrapper/: main.cpp  src.cmake
debian/: changelog  changelog.dch  control  copyright  rules
docs/: DConfig.md  TODO.md
files/: default-folder.ini
images/: arrange.dci  arrow.dci  back.dci  classify.dci  document.dci  emblem_autostart.dci  launcher_classify_letter.dci  launcher_classify_type.dci  launcher_exit_fullscreen.dci  launcher_fullscreen.dci  name.dci
qml/: AlphabetCategory.qml  AlphabetCategoryPopup.qml  AppItemMenu.qml  AppListView.qml  DebugBounding.qml  DebugDialog.qml  DrawerFolder.qml  DummyAppItemMenu.qml  FolderGridViewPopup.qml  FullscreenFrame.qml  GridViewContainer.qml  Helper.qml  IconItemDelegate.qml  Main.qml  WindowedFrame.qml  WindowedFrameV23.qml  WrapView.qml
shell-launcher-applet/: CMakeLists.txt  launcheritem.cpp  launcheritem.h
shell-launcher-applet/package/: launcheritem.qml  metadata.json
shell-launcher-applet/package/icons/flow/: computer-symbolic.dci  folder-documents-symbolic.dci  user-desktop-symbolic.dci
shell-launcher-applet/package/icons/hazy-color/: folder-pictures-symbolic.dci
shell-launcher-applet/package/icons/macaron/: computer-symbolic.dci  user-desktop-symbolic.dci
shell-launcher-applet/package/icons/vintage/: computer-symbolic.dci  folder-documents-symbolic.dci  user-desktop-symbolic.dci
shell-launcher-applet/translations/: org.deepin.ds.dock.launcherapplet.ts  org.deepin.ds.dock.launcherapplet_ar.ts  org.deepin.ds.dock.launcherapplet_az.ts  org.deepin.ds.dock.launcherapplet_bn.ts  org.deepin.ds.dock.launcherapplet_bo.ts  org.deepin.ds.dock.launcherapplet_ca.ts  org.deepin.ds.dock.launcherapplet_de.ts  org.deepin.ds.dock.launcherapplet_de_DE.ts  org.deepin.ds.dock.launcherapplet_es.ts  org.deepin.ds.dock.launcherapplet_et.ts  org.deepin.ds.dock.launcherapplet_fi.ts  org.deepin.ds.dock.launcherapplet_fr.ts  org.deepin.ds.dock.launcherapplet_gl_ES.ts  org.deepin.ds.dock.launcherapplet_he.ts  org.deepin.ds.dock.launcherapplet_hu.ts  org.deepin.ds.dock.launcherapplet_it.ts  org.deepin.ds.dock.launcherapplet_ja.ts  org.deepin.ds.dock.launcherapplet_kab.ts  org.deepin.ds.dock.launcherapplet_kk.ts  org.deepin.ds.dock.launcherapplet_ko.ts  org.deepin.ds.dock.launcherapplet_lo.ts  org.deepin.ds.dock.launcherapplet_lt.ts  org.deepin.ds.dock.launcherapplet_nb_NO.ts  org.deepin.ds.dock.launcherapplet_ne.ts  org.deepin.ds.dock.launcherapplet_nl.ts  org.deepin.ds.dock.launcherapplet_pl.ts  org.deepin.ds.dock.launcherapplet_pt_BR.ts  org.deepin.ds.dock.launcherapplet_ru.ts  org.deepin.ds.dock.launcherapplet_sl.ts  org.deepin.ds.dock.launcherapplet_sq.ts  org.deepin.ds.dock.launcherapplet_tr.ts  org.deepin.ds.dock.launcherapplet_uk.ts  org.deepin.ds.dock.launcherapplet_vi.ts  org.deepin.ds.dock.launcherapplet_zh_CN.ts  org.deepin.ds.dock.launcherapplet_zh_HK.ts  org.deepin.ds.dock.launcherapplet_zh_TW.ts
src/ddeintegration/: CMakeLists.txt  appearance.cpp  appearance.h  appmgr.cpp  appmgr.h  appwiz.cpp  appwiz.h  ddedock.cpp  ddedock.h  xdgactivation.cpp  xdgactivation.h
src/ddeintegration/types/: amglobaltypes.h  objectmap.h  propmap.h  qrect.h  qstringmap.h  qvariantmap.h
src/ddeintegration/xml/: org.deepin.dde.Appearance1.xml  org.deepin.dde.Display1.xml  org.deepin.dde.daemon.Dock1.xml  org.deepin.dde.daemon.Launcher1.xml  org.desktopspec.ApplicationManager1.Application.xml  org.desktopspec.ObjectManager1.xml
src/gioutils/: CMakeLists.txt  appinfo.cpp  appinfo.h  appinfomonitor.cpp  appinfomonitor.h  trashmonitor.cpp
src/models/: CMakeLists.txt  appitem.cpp  appitem.h  appsmodel.cpp  appsmodel.h  categorizedsortproxymodel.cpp  categorizedsortproxymodel.h  countlimitproxymodel.cpp  countlimitproxymodel.h  favoritedproxymodel.cpp  favoritedproxymodel.h  freesortproxymodel.cpp  freesortproxymodel.h  frequentlyusedproxymodel.cpp  frequentlyusedproxymodel.h  itemarrangementproxymodel.cpp  itemarrangementproxymodel.h  itemspage.cpp  itemspage.h  itemspagemodel.cpp  itemspagemodel.h  multipageproxymodel.cpp  multipageproxymodel.h  multipagesortfilterproxymodel.cpp  multipagesortfilterproxymodel.h  org.deepin.dde.launchpad.appsmodel.json  org.deepin.ds.launchpad.json  recentlyinstalledproxymodel.cpp  recentlyinstalledproxymodel.h  searchfilterproxymodel.cpp  searchfilterproxymodel.h  sortproxymodel.cpp  sortproxymodel.h
src/quick/: CMakeLists.txt  blurhashimageprovider.cpp  ksortfilterproxymodel.cpp  launcherappiconprovider.cpp  launcherappiconprovider.h  launcherfoldericonprovider.cpp  launcherfoldericonprovider.h  painteddciicon.cpp  painteddciicon.h
src/treelandintegration/: CMakeLists.txt  personalizationmanager.cpp  personalizationmanager.h  personalizationwindow.cpp  personalizationwindow.h  treeland-personalization-manager-v1.xml
src/utils/: CMakeLists.txt  blurhash.cpp  blurhash.hpp  categoryutils.cpp  categoryutils.h  iconutils.cpp  iconutils.h
systemd/: CMakeLists.txt  org.deepin.dde.Launcher1.service.in
tests/: CMakeLists.txt  gioappinfotest.cpp  itemspagetest.cpp  searchfilterproxymodeltest.cpp
translations/: dde-lauchpad_WKL.ts  dde-launchpad.ts  dde-launchpad_ar.ts  dde-launchpad_az.ts  dde-launchpad_bo.ts  dde-launchpad_ca.ts  dde-launchpad_de.ts  dde-launchpad_de_DE.ts  dde-launchpad_es.ts  dde-launchpad_fi.ts  dde-launchpad_fr.ts  dde-launchpad_hu.ts  dde-launchpad_it.ts  dde-launchpad_ja.ts  dde-launchpad_ko.ts  dde-launchpad_lt.ts  dde-launchpad_nb_NO.ts  dde-launchpad_nl.ts  dde-launchpad_pl.ts  dde-launchpad_pt_BR.ts  dde-launchpad_ru.ts  dde-launchpad_sq.ts  dde-launchpad_uk.ts  dde-launchpad_zh_CN.ts  dde-launchpad_zh_HK.ts  dde-launchpad_zh_TW.ts
(+36 files in other folders)
